--- a/src/WinKCarAudio/wwwroot/css/site.css
+++ b/src/WinKCarAudio/wwwroot/css/site.css
@@ -1,6 +1,15 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 70px;
     padding-bottom: 20px;
+}
+
+/* Margins */
+.margin-bottom-20 {
+    margin-bottom: 20px;
+}
+
+.margin-bottom-30 {
+    margin-bottom: 30px;
 }
 
 /* Wrapping element */
@@ -10,17 +19,48 @@
     padding-right: 15px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-    max-width: 280px;
+/* Main carousel */
+#main-carousel {
+    position: relative;
 }
-
-/* Carousel */
+.carousel {
+    margin-top: -20px;
+}
 .carousel-caption p {
     font-size: 20px;
     line-height: 1.4;
+}
+
+#search-form-container {
+    position: absolute;
+    top: 40%;
+    left: 30%;
+    background: rgba(255, 255, 255, 0.9) ;
+    width: 40%;
+    padding: 20px 40px;
+    z-index: 20;
+}
+
+.search-toggle {
+    font-weight: bold;
+}
+
+.search-toggle ul li {
+    border-left: 1px solid #CCC;
+    padding-left: 10px;
+}
+
+.search-toggle ul li:first-child {
+    border-left: none;
+    padding-left: 5px;
+}
+
+.search-toggle ul li a {
+    color: #333;
+}
+
+.search-items {
+    text-align: center;
 }
 
 /* buttons and links extension to use brackets: [ click me ] */
@@ -47,4 +87,35 @@ textarea {
   .carousel-caption {
     display: none
   }
+
+
+}
+/*Home screen search bar*/
+#searchForm {
+	
+}
+
+/* Asset Index Page */
+.single-asset-container {
+    border: 1px solid #CCC;
+}
+
+.asset-summary-container {
+    padding: 6px 16px 16px 16px;
+}
+
+/* Asset Creation Page */
+#IsForRent {
+    /*display: none;*/
+}
+
+#asset-accessories-content-container .accessory-item button {
+   margin-top: 24px !important;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10px;
 }
