--- a/src/WinKCarAudio/Views/Shared/_Layout.cshtml
+++ b/src/WinKCarAudio/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top mainHeader">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -27,18 +27,24 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">WinKCarAudio</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><strong>WinKCarAudio</strong></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index"><strong>Home</strong></a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About"><strong>About</strong></a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact"><strong>Contact</strong></a></li>
+                    <li><a asp-area="" asp-controller="Assets" asp-action="Index"><strong>Marketplace</strong></a></li>
+                    @if (User.IsInRole("Administrator"))
+                    {
+                        <li><a asp-area="" asp-controller="Admin" asp-action="Index"><strong>Admin</strong></a></li>
+                    }
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
     </div>
+    @RenderSection("jumbotron", false)
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -46,11 +52,12 @@
             <p>&copy; 2017 - WinKCarAudio</p>
         </footer>
     </div>
-
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/lib/cropit/dist/jquery.cropit.js"></script>
+        <script src="~/lib/matchHeight/dist/jquery.matchHeight.js"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -62,8 +69,9 @@
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/lib/cropit/dist/jquery.cropit.js"></script>
+        <script src="~/lib/matchHeight/dist/jquery.matchHeight.js"></script>
     </environment>
-
     @RenderSection("scripts", required: false)
 </body>
 </html>
