--- a/src/WinKCarAudio/Views/Assets/Index.cshtml
+++ b/src/WinKCarAudio/Views/Assets/Index.cshtml
@@ -128,10 +128,7 @@
                                         @Html.DisplayFor(modelItem => item.name)
                                     </a>
                                 </h4>
-                                else if (item.price > 0)
-                                {
-                                    <p>$@Html.DisplayFor(modelItem => item.price)</p>
-                                }
+                                    <p>Price:$@Html.DisplayFor(modelItem => item.price)</p>
                             </div>
                         </div><!-- End single-asset-wrapper -->
                     </li>
